<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HangulDrill</string>
    <string name="action_settings">Settings</string>
    <string name="main_button_start">Start</string>
    <string name="main_button_stop">Stop</string>
    <string name="main_preferences_file_key">org.thbz.hangugdrill.PREFERENCES</string>
    <string name="pref_default_nbWords">6</string>
    <string name="pref_default_nbDigits">4</string>
    <string name="pref_default_speed">5</string>
    <string name="pref_textSize_default">30</string>
    <string name="pref_theme_default">black/white</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="action_savesettings">Save current settings in a configuration</string>
    <string name="action_reinitconfig">Reinit configurations</string>
</resources>
